kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
    fqdn: jenkins.futz.io
spec:
  backend:
    serviceName: jenkins
    servicePort: 80
