kubernetes/proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jenkins
  namespace: jenkins
  fqdn: jenkins.futz.io
spec:
  virtualhost:
    fqdn: jenkins.futz.io
  routes:
    - conditions:
        - prefix: /
      services:
        - name: kgen
          port: 80
